# lingo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DesignSpecification.md  README.md  README_EN.md  SECURITY.md  rustfmt.toml
.github/workflows/: cla.yml  rust.yml
.trae/: .ignore
docs/: CLA.md  CONTRIBUTING.md  path_conversion.md  security.md
examples/: README.md
examples/async/: Cargo.toml  README.md  config.toml
examples/async/src/: main.rs
examples/basic/: Cargo.toml  README.md  config.toml
examples/basic/src/: main.rs
examples/custom_file_reader/: Cargo.toml  README.md  config.toml
examples/custom_file_reader/src/: main.rs
examples/database/: Cargo.toml  README.md  config.toml
examples/database/src/: main.rs
examples/nested/: Cargo.toml  README.md  config.toml
examples/nested/src/: main.rs
examples/path_conversion/: Cargo.toml
examples/path_conversion/src/: main.rs
examples/template/: Cargo.toml  README.md  config.toml
examples/template/src/: main.rs
examples/web_server/: Cargo.toml  README.md  config.toml
examples/web_server/src/: main.rs
lingo-derive/: Cargo.toml
lingo-derive/src/: lib.rs
quantum_config_derive/: Cargo.toml
quantum_config_derive/src/: lib.rs
src/: error.rs  integration_tests.rs  lib.rs  meta.rs  path_conversion.rs  paths.rs  security_tests.rs
src/providers/: clap_provider.rs  env_provider.rs  file_provider.rs  file_reader.rs  mod.rs
