[package]
name = "lingo-derive"
version = "0.1.0"
edition = "2021"
authors = ["Kirky.X <Kirky-X@outlook.com>"]
license = "Apache-2.0"
description = "Derive macros for the Lingo configuration library"
repository = "https://github.com/Kirky-X/lingo"
keywords = ["config", "configuration", "derive", "macro"]
categories = ["config", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }