[package]
name = "quantum_config_derive"
version = "0.2.1"
edition = "2021"
authors = ["Kirky.X <Kirky-X@outlook.com>"]
license = "Apache-2.0"
description = "Derive macros for the quantum_config library"
repository = "https://github.com/Kirky-X/quantum_config"
keywords = ["config", "configuration", "derive", "macro"]
categories = ["config", "development-tools"]
exclude = [
    "Cargo.toml.orig",
    "target/",
    "*.log",
    ".DS_Store",
    "Thumbs.db"
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-crate = "3"
proc-macro2 = "1.0"