[package]
name = "async-example"
version = "0.2.0"
edition = "2021"

[dependencies]
quantum_config = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }