[package]
name = "database-example"
version = "0.1.0"
edition = "2021"

[dependencies]
lingo = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
