[package]
name = "web-server-example"
version = "0.2.0"
edition = "2021"

[dependencies]
quantum_config = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
serde_json = "1.0"